修改源码，以使得相同命名空间相同的id，不同的databaseid可以放在不同的文件中

--- a/sgg/mybatis/pom.xml
+++ b/sgg/mybatis/pom.xml
@@ -10,10 +10,16 @@
     <packaging>war</packaging>
 
     <dependencies>
-        <dependency>
+        <!--<dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
             <version>3.4.0</version>
+        </dependency>-->
+
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>3.4.6</version>
         </dependency>
 
         <dependency>
