使用聚合统一管理

--- a/sggbigdata/sqoop/pom.xml
+++ b/sggbigdata/sqoop/pom.xml
@@ -5,20 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.demo.mydemo</groupId>
-    <artifactId>sggbigdata</artifactId>
+    <artifactId>sqoop</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-
-    <modules>
-        <module>flume</module>
-        <module>hadoop</module>
-        <module>hbase</module>
-        <module>hive</module>
-        <module>kafka</module>
-        <module>sqoop</module>
-        <module>zookeeper</module>
-    </modules>
-
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -27,4 +15,5 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
+
 </project>
