--- a/sgg/microservicecloud/microservice-zuul-gateway-9527/pom.xml
+++ b/sgg/microservicecloud/microservice-zuul-gateway-9527/pom.xml
@@ -37,9 +37,9 @@
         </dependency>
         <!-- 日常标配 -->
         <dependency>
-            <groupId>com.atguigu.springcloud</groupId>
-            <artifactId>microservicecloud-api</artifactId>
-            <version>${project.version}</version>
+            <groupId>com.demo.mydemo</groupId>
+            <artifactId>microservice-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
