--- a/sgg/pom.xml
+++ b/sgg/pom.xml
@@ -5,18 +5,27 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.demo.mydemo</groupId>
-    <artifactId>sggbigdata</artifactId>
+    <artifactId>sgg</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <modules>
-        <module>flume</module>
-        <module>hadoop</module>
-        <module>hbase</module>
-        <module>hive</module>
-        <module>kafka</module>
-        <module>sqoop</module>
-        <module>zookeeper</module>
+        <module>activeMq</module>
+        <module>designPattern</module>
+        <module>jdbc</module>
+        <module>jpa</module>
+        <module>microservicecloud</module>
+        <module>mybatis</module>
+        <module>netty</module>
+        <module>servlet3.0</module>
+        <module>shiro</module>
+        <module>spring</module>
+        <module>spring-annotation</module>
+        <module>springboot</module>
+        <module>springboot-concordance</module>
+        <module>springdata</module>
+        <module>springmvc</module>
+        <module>springmvc-annotation</module>
     </modules>
 
     <properties>
