--- a/sggbigdata/azkaban/pom.xml
+++ b/sggbigdata/azkaban/pom.xml
@@ -5,27 +5,29 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.demo.mydemo</groupId>
-    <artifactId>sggbigdata</artifactId>
+    <artifactId>azkaban</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-
-    <modules>
-        <module>azkaban</module>
-        <module>flume</module>
-        <module>hadoop</module>
-        <module>hbase</module>
-        <module>hive</module>
-        <module>kafka</module>
-        <module>sqoop</module>
-        <module>zookeeper</module>
-    </modules>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <!-- 编译时的编码 -->
         <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.6</maven.compiler.source>
+        <maven.compiler.target>1.6</maven.compiler.target>
     </properties>
+
+    <build>
+        <finalName>azkaban-demo</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
