--- a/sgg/dubbo/boot-order-service-consumer/src/main/resources/application.properties
+++ b/sgg/dubbo/boot-order-service-consumer/src/main/resources/application.properties
@@ -4,3 +4,5 @@ dubbo.application.name=boot-order-service-consumer
 dubbo.registry.address=zookeeper://hadoop102:2181
 
 dubbo.monitor.protocol=registry
+
+dubbo.consumer.check=false
