--- a/sggbigdata/pom.xml
+++ b/sggbigdata/pom.xml
@@ -20,6 +20,7 @@
         <module>sqoop</module>
         <module>zookeeper</module>
         <module>project</module>
+        <module>hivefunction</module>
     </modules>
 
     <properties>
