--- a/sgg/mybatisplus/pom.xml
+++ b/sgg/mybatisplus/pom.xml
@@ -64,7 +64,7 @@
 
         <dependency>
             <groupId>org.apache.velocity</groupId>
-            <artifactId>velocity-engine-parent</artifactId>
+            <artifactId>velocity-engine-core</artifactId>
             <version>2.0</version>
         </dependency>
         <dependency>
@@ -76,6 +76,11 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>5.0.8.RELEASE</version>
         </dependency>
     </dependencies>
 
