--- a/sgg/mybatisplus/src/main/resources/mp5/db.properties
+++ b/sgg/mybatisplus/src/main/resources/mp5/db.properties
@@ -2,3 +2,8 @@ jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/mp
 jdbc.username=root
 jdbc.password=root
+
+orcl.driver=oracle.jdbc.OracleDriver
+orcl.url=jdbc:oracle:thin:@localhost:1521:orcl
+orcl.username=scott
+orcl.password=scott
