--- a/sgg/springboot-concordance/src/main/resources/application.properties
+++ b/sgg/springboot-concordance/src/main/resources/application.properties
@@ -8,3 +8,9 @@ logging.level.com.atguigu.cache.mapper=debug
 debug=true
 
 spring.redis.host=127.0.0.1
+
+#rabbitmq
+spring.rabbitmq.host=hadoop102
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.port=5672
