--- a/sgg/springboot-concordance/src/main/resources/application.properties
+++ b/sgg/springboot-concordance/src/main/resources/application.properties
@@ -14,3 +14,10 @@ spring.rabbitmq.host=hadoop102
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 spring.rabbitmq.port=5672
+
+#jest²Ù×÷elasticsearch
+spring.elasticsearch.jest.uris=http://hadoop102:9200
+
+#springdata²Ù×÷elasticsearch
+spring.data.elasticsearch.cluster-name=elasticsearch
+spring.data.elasticsearch.cluster-nodes=hadoop102:9300
