--- a/sgg/springboot-concordance/src/main/resources/application.properties
+++ b/sgg/springboot-concordance/src/main/resources/application.properties
@@ -7,17 +7,25 @@ logging.level.com.atguigu.cache.mapper=debug
 
 debug=true
 
-spring.redis.host=127.0.0.1
+#spring.redis.host=127.0.0.1
 
 #rabbitmq
-spring.rabbitmq.host=hadoop102
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
-spring.rabbitmq.port=5672
+#spring.rabbitmq.host=hadoop102
+#spring.rabbitmq.username=guest
+#spring.rabbitmq.password=guest
+#spring.rabbitmq.port=5672
 
-#jest²Ù×÷elasticsearch
-spring.elasticsearch.jest.uris=http://hadoop102:9200
+#jest    elasticsearch
+#spring.elasticsearch.jest.uris=http://hadoop102:9200
 
-#springdata²Ù×÷elasticsearch
-spring.data.elasticsearch.cluster-name=elasticsearch
-spring.data.elasticsearch.cluster-nodes=hadoop102:9300
+#springdata    elasticsearch
+#spring.data.elasticsearch.cluster-name=elasticsearch
+#spring.data.elasticsearch.cluster-nodes=hadoop102:9300
+
+#mail
+#spring.mail.username=583004700@qq.com
+#spring.mail.password=qhbayejrvnifbehe
+#spring.mail.host=smtp.qq.com
+#spring.mail.properties.mail.smtp.ssl.enable=true
+
+
