--- a/sgg/pom.xml
+++ b/sgg/pom.xml
@@ -23,6 +23,8 @@
         <module>spring</module>
         <module>springboot</module>
         <module>springboot-concordance</module>
+        <module>springboot-concordance/springboot-concordance-security</module>
+
         <module>springdata</module>
         <module>springmvc</module>
         <module>springmvc-annotation</module>
