--- a/sgg/encrypt-decrypt/pom.xml
+++ b/sgg/encrypt-decrypt/pom.xml
@@ -38,6 +38,15 @@
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
+                    <!--
+                        com.sun.org.apache.xml.internal.security.utils.Base64;编译异常
+                        将${java.home}/lib/rt.jar添加到maven的compiler里面
+            　　　　　　　如果 JAVA_HOME 里面没有，将 jre 里面的 copy 过来
+                    -->
+                    <compilerArguments>
+                        <verbose/>
+                        <bootclasspath>${java.home}/lib/rt.jar:${java.home}/lib/jce.jar</bootclasspath>
+                    </compilerArguments>
                 </configuration>
             </plugin>
         </plugins>
