--- a/sgg/encrypt-decrypt/pom.xml
+++ b/sgg/encrypt-decrypt/pom.xml
@@ -45,7 +45,7 @@
                     -->
                     <compilerArguments>
                         <verbose/>
-                        <bootclasspath>${java.home}/lib/rt.jar:${java.home}/lib/jce.jar</bootclasspath>
+                        <bootclasspath>${java.home}/lib/rt.jar;${java.home}/lib/jce.jar</bootclasspath>
                     </compilerArguments>
                 </configuration>
             </plugin>
