--- a/sgg/pom.xml
+++ b/sgg/pom.xml
@@ -15,6 +15,7 @@
         <module>dubbo</module>
         <module>jdbc</module>
         <module>jpa</module>
+        <module>mian</module>
         <module>microservicecloud</module>
         <module>mybatis</module>
         <module>netty</module>
