--- a/sgg/mian/pom.xml
+++ b/sgg/mian/pom.xml
@@ -24,6 +24,12 @@
             <artifactId>lombok</artifactId>
             <version>1.18.8</version>
         </dependency>
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>3.2.2</version>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
     <build>
