--- a/sgg/pom.xml
+++ b/sgg/pom.xml
@@ -35,9 +35,10 @@
         <module>springmvc</module>
         <module>springmvc-annotation</module>
         <module>spring-annotation</module>
+        <module>spring-security</module>
         <module>redis</module>
         <module>mybatisplus</module>
-        <module>encrypt-decrypt</module>
+<!--        <module>encrypt-decrypt</module>-->
         <module>gitGithub</module>
         <module>mycat</module>
 
