--- a/sgg/jdbc/pom.xml
+++ b/sgg/jdbc/pom.xml
@@ -30,11 +30,11 @@
             <version>5.1.35</version>
         </dependency>
 
-        <dependency>
+        <!--<dependency>
             <groupId>com.oracle</groupId>
             <artifactId>ojdbc6</artifactId>
             <version>11.2.0.1.0</version>
-        </dependency>
+        </dependency>-->
 
         <!-- https://mvnrepository.com/artifact/commons-beanutils/commons-beanutils -->
         <dependency>
