--- a/sgg/mybatis/pom.xml
+++ b/sgg/mybatis/pom.xml
@@ -34,11 +34,11 @@
             <version>5.1.35</version>
         </dependency>
 
-        <dependency>
+        <!--<dependency>
             <groupId>com.oracle</groupId>
             <artifactId>ojdbc6</artifactId>
             <version>12.1.0.1-atlassian-hosted</version>
-        </dependency>
+        </dependency>-->
 
         <dependency>
             <groupId>net.sf.ehcache</groupId>
