--- a/sgg/mybatisplus/pom.xml
+++ b/sgg/mybatisplus/pom.xml
@@ -82,11 +82,11 @@
             <artifactId>spring-webmvc</artifactId>
             <version>5.0.8.RELEASE</version>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>com.oracle</groupId>
             <artifactId>ojdbc6</artifactId>
             <version>11.2.0.1.0</version>
-        </dependency>
+        </dependency>-->
     </dependencies>
 
     <build>
