--- a/sgg/activiti/actSpringDemo/pom.xml
+++ b/sgg/activiti/actSpringDemo/pom.xml
@@ -5,85 +5,68 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.demo.mydemo</groupId>
-    <artifactId>activiti01</artifactId>
+    <artifactId>actSpringDemo</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
         <slf4j.version>1.6.6</slf4j.version>
         <log4j.version>1.2.12</log4j.version>
-        <activiti.version>7.0.0.Beta1</activiti.version>
-
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <!-- 编译时的编码设置 -->
-        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
-
     <dependencies>
         <dependency>
             <groupId>org.activiti</groupId>
             <artifactId>activiti-engine</artifactId>
-            <version>${activiti.version}</version>
+            <version>7.0.0.Beta1</version>
         </dependency>
         <dependency>
             <groupId>org.activiti</groupId>
             <artifactId>activiti-spring</artifactId>
-            <version>${activiti.version}</version>
+            <version>7.0.0.Beta1</version>
         </dependency>
-        <!-- bpmn 模型处理 -->
         <dependency>
             <groupId>org.activiti</groupId>
             <artifactId>activiti-bpmn-model</artifactId>
-            <version>${activiti.version}</version>
+            <version>7.0.0.Beta1</version>
         </dependency>
-        <!-- bpmn 转换 -->
         <dependency>
             <groupId>org.activiti</groupId>
             <artifactId>activiti-bpmn-converter</artifactId>
-            <version>${activiti.version}</version>
+            <version>7.0.0.Beta1</version>
         </dependency>
-        <!-- bpmn json数据转换 -->
         <dependency>
             <groupId>org.activiti</groupId>
             <artifactId>activiti-json-converter</artifactId>
-            <version>${activiti.version}</version>
+            <version>7.0.0.Beta1</version>
         </dependency>
-        <!-- bpmn 布局 -->
         <dependency>
             <groupId>org.activiti</groupId>
             <artifactId>activiti-bpmn-layout</artifactId>
-            <version>${activiti.version}</version>
+            <version>7.0.0.Beta1</version>
         </dependency>
-        <!-- activiti 云支持 -->
         <dependency>
             <groupId>org.activiti.cloud</groupId>
             <artifactId>activiti-cloud-services-api</artifactId>
-            <version>${activiti.version}</version>
+            <version>7.0.0.Beta1</version>
         </dependency>
-        <!-- mysql驱动 -->
+        <dependency>
+            <groupId>aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.5.4</version>
+        </dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.18</version>
         </dependency>
-        <!-- mybatis -->
-        <dependency>
-            <groupId>org.mybatis</groupId>
-            <artifactId>mybatis</artifactId>
-            <version>3.4.5</version>
-        </dependency>
-        <!-- 链接池 -->
-        <dependency>
-            <groupId>commons-dbcp</groupId>
-            <artifactId>commons-dbcp</artifactId>
-            <version>1.4</version>
-        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>5.0.7.RELEASE</version>
         </dependency>
         <!-- log start -->
         <dependency>
@@ -102,14 +85,21 @@
             <version>${slf4j.version}</version>
         </dependency>
         <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>2.6</version>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-nop</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+        <!-- log end -->
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>3.4.5</version>
         </dependency>
         <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.18.8</version>
+            <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+            <version>1.4</version>
         </dependency>
     </dependencies>
+
 </project>
