--- a/sgg/pom.xml
+++ b/sgg/pom.xml
@@ -11,7 +11,6 @@
 
     <modules>
         <module>activeMq</module>
-        <module>activiti</module>
         <module>dataStructuresAndAlgorithms</module>
         <module>designPattern</module>
         <module>dubbo</module>
@@ -34,7 +33,6 @@
         <module>springboot-concordance/springboot-concordance-security</module>
         <module>springboot-concordance/springboot-concordance-springcloud</module>
         <module>springboot-concordance/springboot-concordance-actuator</module>
-
         <module>springdata</module>
         <module>springmvc</module>
         <module>springmvc-annotation</module>
@@ -48,6 +46,11 @@
         <module>mycat</module>
 
         <module>dubbo-admin</module>
+
+
+
+        <module>activiti</module>
+        <module>stone</module>
     </modules>
 
     <properties>
