--- a/sgg/stone/pom.xml
+++ b/sgg/stone/pom.xml
@@ -5,12 +5,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.demo.mydemo</groupId>
-    <artifactId>activiti</artifactId>
+    <artifactId>stone</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
 
-    <modules>
-        <module>activiti01</module>
-        <module>actSpringDemo</module>
-    </modules>
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.8</version>
+        </dependency>
+    </dependencies>
 </project>
