--- a/sgg/activiti/actSpringBootDemo/src/main/resources/application.yml
+++ b/sgg/activiti/actSpringBootDemo/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql:///actspringboot?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT
+    url: jdbc:mysql://localhost:3306/actspring?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT&useSSL=false
     username: root
     password: root
   activiti:
