--- a/sgg/activiti/pom.xml
+++ b/sgg/activiti/pom.xml
@@ -12,5 +12,6 @@
     <modules>
         <module>activiti01</module>
         <module>actSpringDemo</module>
+        <module>actSpringBootDemo</module>
     </modules>
 </project>
