--- a/sgg/stone/pom.xml
+++ b/sgg/stone/pom.xml
@@ -14,5 +14,18 @@
             <artifactId>lombok</artifactId>
             <version>1.18.8</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>gluonj</groupId>
+            <artifactId>gluonj</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/gluonj.jar</systemPath>
+        </dependency>
     </dependencies>
 </project>
