--- a/sgg/spring-annotation/pom.xml
+++ b/sgg/spring-annotation/pom.xml
@@ -64,5 +64,10 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.44</version>
         </dependency>
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
     </dependencies>
 </project>
