--- a/sgg/mybatis/pom.xml
+++ b/sgg/mybatis/pom.xml
@@ -131,7 +131,11 @@
             <version>5.1.8</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.9.4</version>
+        </dependency>
     </dependencies>
 
     <build>
