--- a/book/pom.xml
+++ b/book/pom.xml
@@ -21,5 +21,7 @@
         <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <lombok.version>1.18.8</lombok.version>
+        <junit.version>4.12</junit.version>
     </properties>
 </project>
