--- a/book/stone/pom.xml
+++ b/book/stone/pom.xml
@@ -4,7 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.demo.mydemo</groupId>
+    <parent>
+        <groupId>com.demo.mydemo</groupId>
+        <artifactId>book</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
     <artifactId>stone</artifactId>
     <version>1.0-SNAPSHOT</version>
 
@@ -21,12 +26,12 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.8</version>
+            <version>${lombok.version}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
