--- a/book/pom.xml
+++ b/book/pom.xml
@@ -17,6 +17,7 @@
         <module>gxnmysql</module>
         <module>cxszmpqld</module>
         <module>wlszyljd</module>
+        <module>jvmgzzdyxnyh2</module>
     </modules>
 
     <properties>
