--- a/sgg/microservicecloud/microservice-provider-dept-8002/src/main/resources/application.yml
+++ b/sgg/microservicecloud/microservice-provider-dept-8002/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
     driver-class-name: org.gjt.mm.mysql.Driver              # mysql驱动包
     url: jdbc:mysql://127.0.0.1:3306/clouddb02              # 数据库名称
     username: root
-    password: root
+    password: 123456
     dbcp2:
       min-idle: 5                                           # 数据库连接池的最小维持连接数
       initial-size: 5                                       # 初始化连接数
