单元测试指定配置文件

--- a/sgg/springboot/src/main/resources/s02config/application.properties
+++ b/sgg/springboot/src/main/resources/s02config/application.properties
@@ -7,9 +7,9 @@ spring.http.encoding.enabled=true
 server.tomcat.uri-encoding=UTF-8
 
 #\u914D\u7F6Eperson\u7684\u503C
-person.last-name=\u5F20\u4E09${random.uuid}
+person.last-name=dog
 person.age=${random.int}
-person.birth=2017/12/12
+person.birth=2019/12/12
 person.boss=false
 person.maps.k1=v1
 person.maps.k2=v2
