--- a/sgg/springboot/src/main/resources/s02config/person.properties
+++ b/sgg/springboot/src/main/resources/s02config/person.properties
@@ -1,6 +1,7 @@
+person.birthday=2030/12/12
 person.last-name=\u674E\u56DB
 person.age=18
-person.birth=2017/12/12
+person.birth=${person.birthday:2020/12/12}
 person.boss=false
 person.maps.k1=v1
 person.maps.k2=v2
