--- a/sgg/springcloud-consul/pom.xml
+++ b/sgg/springcloud-consul/pom.xml
@@ -53,6 +53,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-consul-discovery</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-spring-boot-starter</artifactId>
+            <version>2.0.9</version>
+        </dependency>
     </dependencies>
 
     <!-- 引入cloud依赖 -->
