spring-security-oauth2

--- a/sgg/pom.xml
+++ b/sgg/pom.xml
@@ -50,6 +50,8 @@
         <module>springcloud-consul</module>
         <module>springcloud-consul/springcloud-consul-consume</module>
 
+        <module>springcloud-oauth2</module>
+
         <module>activiti</module>
     </modules>
 
