--- a/sgg/springcloud-consul/springcloud-consul-student-provider/pom.xml
+++ b/sgg/springcloud-consul/springcloud-consul-student-provider/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.demo.mydemo</groupId>
-    <artifactId>springcloud-consul-consume</artifactId>
+    <artifactId>springcloud-consul-student-provider</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <parent>
@@ -54,8 +54,9 @@
             <artifactId>spring-cloud-starter-consul-discovery</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-spring-boot-starter</artifactId>
+            <version>2.0.9</version>
         </dependency>
     </dependencies>
 
@@ -88,5 +89,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
