--- a/sgg/springcloud-consul/springcloud-consul-student-provider/pom.xml
+++ b/sgg/springcloud-consul/springcloud-consul-student-provider/pom.xml
@@ -58,6 +58,12 @@
             <artifactId>knife4j-spring-boot-starter</artifactId>
             <version>2.0.9</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-micro-spring-boot-starter</artifactId>
+            <version>2.0.9</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <!-- 引入cloud依赖 -->
