--- a/sgg/pom.xml
+++ b/sgg/pom.xml
@@ -53,6 +53,7 @@
 
         <module>activiti</module>
         <module>xxl-job</module>
+        <module>project</module>
     </modules>
 
     <properties>
