--- a/sgg/xxl-job/xxl-job/xxl-job-admin/src/main/resources/application.properties
+++ b/sgg/xxl-job/xxl-job/xxl-job-admin/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ### web
-server.port=8080
+server.port=1888
 server.servlet.context-path=/xxl-job-admin
 
 ### actuator
@@ -25,7 +25,7 @@ mybatis.mapper-locations=classpath:/mybatis-mapper/*Mapper.xml
 ### xxl-job, datasource
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/xxl_job?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&serverTimezone=Asia/Shanghai
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=rootroot
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 ### datasource-pool
