--- a/basePageManager/maku-admin/.env.development
+++ b/basePageManager/maku-admin/.env.development
@@ -1,5 +1,1 @@
-# 使用【演示环境】接口地址
-#VITE_API_URL=https://demo.maku.net/maku-boot-server
-
-# 使用【本地环境]接口地址
-VITE_API_URL=http://localhost:8080
+VITE_API_URL=https://dzapp.hzyckj.asia/console
